[package]
name = "notion"
version = "0.5.1"
authors = ["Jake Swenson <jake@jakeswenson.com>"]
edition = "2018"
repository = "https://github.com/jakeswenson/notion"
readme = "README.md"

description = "A Notion Api Client"
license = "MIT"

[dependencies]
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
time = { version = "0.3.17", features = ["serde", "serde-human-readable", "parsing", "formatting"] }

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
cargo-husky = "1"
wiremock = "0.5.2"
anyhow = "1.0.40"
clap = { version = "4.0", features = ["derive"] }
skim = "0.10.2"
crossbeam-channel = "0.5"
toml = "0.5.8"

[dev-dependencies.config]
version = "0.13.3"
features = ["toml"]
