[package]
name = "notion"
version = "0.5.1"
authors = ["Jake Swenson <jake@jakeswenson.com>"]
edition = "2021"
repository = "https://github.com/jakeswenson/notion"
readme = "README.md"

description = "A Notion Api Client"
license = "MIT"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
http = "0.2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11.22", features = ["json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
url = "2.4.1"

[dev-dependencies]
anyhow = "1.0.40"
cargo-husky = "1"
clap = { version = "4.0", features = ["derive"] }
config = { version = "0.11.0", features = ["toml"] }
crossbeam-channel = "0.5"
skim = "0.10.2"
toml = "0.5.8"
tokio = { version = "1", features = ["full"] }
wiremock = "0.5.2"
